fixed some problems with the widths of the logo and intro-content on safari and hopefully IE

--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -257,6 +257,7 @@ html
 }
 .intro__logo-wrapper
 {
+    width: 7.77778rem;
     margin: 0 auto 1.6667rem auto;
     padding: .8333rem;
 
@@ -279,6 +280,7 @@ html
     font-size: 1.6667rem;
     line-height: 1.6667rem;
 
+    width: 54.6667rem;
     margin: 0 auto;
     padding: 1.6667rem;
 
